--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "bootstrap": "^3.3.7",
     "bootstrap-colorpicker": "^2.5.2",
+    "fs-extra": "^5.0.0",
     "jquery": "^3.2.1"
   }
 }
