--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "electron": "~1.7.10"
   },
   "dependencies": {
+    "@fortawesome/fontawesome": "^1.1.0",
+    "@fortawesome/fontawesome-free-brands": "^5.0.2",
     "bootstrap": "^3.3.7",
     "bootstrap-colorpicker": "^2.5.2",
     "fs-extra": "^5.0.0",
